# oblique-plane-microscopy

./: README.md
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/: README.md  pyproject.toml
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/deskewing_pipeline/: README.md
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/deskewing_pipeline/configs/: example_pipeline.yaml  example_raw.yaml
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/deskewing_pipeline/scripts/: fuse_plate.py  process_plate.py  register_beads_pipeline.py  run_fuse.bat  run_fuse.sh  run_process.bat  run_process.sh  run_register.bat  run_register.sh  run_summary.bat  run_summary.sh
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/deskewing_pipeline/src/: fused_maxproj.py  raw_maxproj.py  register_beads.py  summary_fused.py  summary_raw.py
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/src/dopm/: README.md  data_converter.py  fiji_bridge.py  fusion.py  metadata.py  npy2bdv.py
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/deskewing/src/dopm_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/prefind/: .gitignore  README.md  pyproject.toml
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/prefind/configs/: prefind_settings.yaml
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/prefind/docs/: nis_elements_sync.md
dOPM-MultiSiteAssayPaper/dOPM_MultiSiteAssayPipeline/prefind/scripts/: run_prefind.py  watch_sync_file.py
(+140 files in other folders)
